# MuInstantMessage

./: .gitignore  README.md
client/muchat/: CMakeLists.txt  configManager.h  configmanager.cpp  global.cpp  global.h  httpmanager.cpp  httpmanager.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  singleton.h
client/muchat/style/: stylesheet.qss
server/GateServer/: .gitignore  CMakeLists.txt  CServer.cpp  CServer.h  GateServer.cpp  GateServer.sln  GateServer.vcxproj  GateServer.vcxproj.filters  asioIOContextPool.cpp  asioIOContextPool.h  configManager.cpp  configManager.h  const.h  httpConnection.cpp  httpConnection.h  logicSystem.cpp  logicSystem.h  message.grpc.pb.h  message.pb.h  singleton.h  utils.cpp  utils.h  varifyGrpcClient.cpp  varifyGrpcClient.h
server/GateServer/config/: config.ini
server/GateServer/include/common/: const.h  utils.h
server/GateServer/include/config/: configManager.h
server/GateServer/include/database/: pgConnPool.h  pgDao.h  pgManager.h
server/GateServer/include/logic/: logicSystem.h
server/GateServer/include/network/: CServer.h  asioIOContextPool.h  httpConnection.h  varifyGrpcClient.h
server/GateServer/proto/: message.proto
server/GateServer/src/: GateServer.cpp
server/GateServer/src/common/: utils.cpp
server/GateServer/src/config/: configManager.cpp
server/GateServer/src/database/: pgConnPool.cpp  pgDao.cpp  pgManager.cpp
server/GateServer/src/logic/: logicSystem.cpp
server/GateServer/src/network/: CServer.cpp  asioIOContextPool.cpp  httpConnection.cpp  varifyGrpcClient.cpp
server/GateServer/vs2022_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GateServer.sln  GateServer.vcxproj  GateServer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  config.ini
server/VarifyServer/: README.md  config.json  config.ts  const.ts  email.ts  message.proto  package.json  proto.ts  redis.ts  server.ts
sql/: mu_ins_init.sql  mu_ins_test.sql
